--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*"],
+  "include": ["server,.ts", "src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
